--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -20,6 +20,14 @@
             // padding-right: 20px;
             display: flex;
 }
+.container-main{
+    max-width: 1280px;
+        align-items: center;
+        margin-left: auto;
+        margin-right: auto;
+       
+        display: flex;
+}
 .input{
     width: 177px;
     height: 42px;
@@ -30,6 +38,13 @@
     // border-bottom: 0.5px solid #fff;
     position: relative;
     
+}
+.form-text{
+        position: absolute;
+            top: 145px;
+            left: 165px;
+            font-size: 14px;
+            color: #FFFFFF;
 }
 .button_search{
     background-image: url('../images/search\ 2.png');
@@ -46,8 +61,8 @@
 .button-home{
     width: 99px;
     height: 42px;
-        // color: #fff;
-        background-color: #FFFFFF;
+        color: #fff;
+        background-color: #000000;
         border-radius: 100px;
         border: none;
 }
