--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,24 +9,49 @@
     padding-top: 42px;
     padding-bottom: 89px;
 }
-.container{
-        max-width: 1280px;
-            align-items: center;
-            // margin-bottom: 60px;
-            margin-left: auto;
-            margin-right: auto;
-            padding-top: 40px;
-            padding-left: 80px;
-            // padding-right: 20px;
-            display: flex;
+// .container{
+//         max-width: 1280px;
+//             align-items: center;
+//             // margin-bottom: 60px;
+//             margin-left: auto;
+//             margin-right: auto;
+//             padding-top: 40px;
+//             padding-left: 80px;
+//             // padding-right: 20px;
+//             display: flex;
+// }
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+
+    @media screen and (min-width: 320px) {
+        width: 320px;
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 768px;
+        padding-left: 32px;
+        padding-right: 32px;
+        padding-top: 32px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        width: 1280px;
+    }
 }
+
 .container-main{
-    max-width: 1280px;
+    display: flex;
+    // max-width: 1280px;
         align-items: center;
         margin-left: auto;
         margin-right: auto;
        
-        display: flex;
 }
 .input{
     width: 177px;
@@ -89,8 +114,23 @@
 }
 
 .img-start{
-    width: 395px;
-    height: 574px;
+    width: 280px;
+    height: 460px;
+
+    @media screen and (min-width: 320px) {
+            width: 320px;
+        }
+    
+        @media screen and (min-width: 768px) {
+            width: 336px;
+                height: 455px;
+           
+        }
+    
+        @media screen and (min-width: 1280px) {
+            width: 395px;
+                height: 574px;
+        }
     
 }
 .gallery-start {
@@ -122,6 +162,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%)scale(1);
+}
+
+.is-hidden{
+    display: none;
 }
 
 .modal {
