--- a/src/sass/library.scss
+++ b/src/sass/library.scss
@@ -1,3 +1,74 @@
+.img-start {
+    width: 280px;
+    height: 460px;
+
+    @media screen and (min-width: 320px) {
+        width: 320px;
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 336px;
+        height: 455px;
+
+    }
+
+    @media screen and (min-width: 1280px) {
+        width: 395px;
+        height: 574px;
+    }
+
+}
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+
+    @media screen and (min-width: 320px) {
+        width: 320px;
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 768px;
+        padding-left: 32px;
+        padding-right: 32px;
+        padding-top: 32px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        width: 1280px;
+    }
+}
+// .library-gallery{
+//         width: 100%;
+//             flex-wrap: wrap;
+//             justify-content: center;
+//             align-items: center;
+//             gap: 32px;
+//             padding: 60px 32px 0;
+//             display: flex;
+// }
+
+.lib__watched-container{width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    padding: 60px 32px 0;
+    display: flex;}
+
+.lib__queue-container{width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    padding: 60px 32px 0;
+    display: flex;}
+
+
 .button__libraty-watched {
     width: 120px;
     height: 42px;
@@ -33,23 +104,34 @@
 }
 
 .button-watchq-ueue{
-    margin-left: 700px;
+    margin-left: 500px;
+    display: flex;
 }
 
-.empty-page{
-    background-image: url('../images/ticket-2974645_1920.jpg');
-    background-repeat: no-repeat;
-        background-size: cover;
-        width: 768px;
-            height: 512px;
-        margin-left: auto;
-        margin-right: auto;
-}
+// .empty-page{
+//     background-image: url('../images/ticket-2974645_1920.jpg');
+//     background-repeat: no-repeat;
+//         background-size: cover;
+//         width: 768px;
+//             height: 512px;
+//         margin-left: auto;
+//         margin-right: auto;
+// }
+
 .empty-text{
         align-items: center;
             display: flex;
             justify-content: center;
             font-size: 40px;
+}
+
+.library_btn-click-color{
+    background-color: #312f2f;
+    color: #FFFFFF;
+}
+
+.is-hidden {
+    display: none;
 }
 
 // ========modal======
